# waf_project

./: README.md  pyproject.toml
data/: cities_name.csv  processed_loan_data.csv  quickAnalysis.csv  raw_loan_data.csv  raw_loan_data_date.csv
notebooks/: charge_off_amount_LR.ipynb  k-clustering.ipynb  logistic_regression.ipynb  preprocessing_work.ipynb
waf_project/: data_preprocessing.py  economic_factors_loan_relationship  k-clustering.py  linear-reg.py  loan_approval_over_time  logistic-reg.py
