[project]
name = "waf-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin X.",email = "kevinxuestrike@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"  
numpy = "<2"  
pandas = "^2.1.4"  
seaborn = "^0.13.2"
matplotlib = "^3.8.2"  
requests = "^2.31.0" 
lxml = "^4.9.2"  
notebook = "^7.3.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
fuzzywuzzy = "^0.18.0"
rapidfuzz = "^3.12.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
